--- a/my_midway_v2/.serverless/package.json
+++ b/my_midway_v2/.serverless/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@midwayjs/simple-lock": "*",
+    "@midwayjs/serverless-fc-starter": "*",
+    "picomatch": "*",
+    "@midwayjs/bootstrap": "*",
     "@midwayjs/decorator": "^2.3.0",
+    "@midwayjs/egg-layer": "^2.7.4",
     "@midwayjs/web": "^2.3.0",
     "egg": "^2.0.0",
-    "egg-scripts": "^2.10.0",
-    "ioredis": "^4.22.0",
-    "urllib": "^2.36.1"
+    "egg-scripts": "^2.10.0"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.0.0",
@@ -37,8 +40,7 @@
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
     "build": "midway-bin build -c",
-    "deploy": "midway-bin deploy",
-    "online": "egg-scripts start --title=h_midway --framework=@midwayjs/web"
+    "deploy": "midway-bin deploy"
   },
   "midway-bin-clean": [
     ".vscode/.tsbuildinfo",
